all.css
@import url('https://fonts.googleapis.com/css2?family=Proxima+Nova');

body {
    /* font-family: Arial, sans-serif; */
    font-family: 'League Spartan';
    font-size: 19px;
    /* line-height: 1.4; */
    margin: 0;
    padding: 0;
    background-color: #f0f0f0;
}

.header {
    background-color: #333;
    color: #fff;
    padding: 10px;
    text-align: center;
}

.main-content {
    border: 15px;
    /* Your existing border */
    margin: 0 auto;
    /* Center the content */
    width: 60%;
    /* Adjust this as needed */
}

/* This will apply when the aspect ratio is more vertical */
@media (orientation: portrait) {
    .main-content {
        margin: 0;
        width: 100%;
    }
}

a {
    color: rgb(52, 152, 222);
}

